src/test/deca/context/invalid/created/acces_field/field_inconnu.deca
// Description :
//    acces à un field non existant
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 :(3.65) x n’est pas un attribut de la classe A

class A{
}

{
A a = new A();
int b = a.x;
}
